scrollbar fix

--- a/css/game2.css
+++ b/css/game2.css
@@ -307,16 +307,27 @@ div#game_conversation_top img {
     align-items: center;
     overflow-x: auto;
 }
-body::-webkit-scrollbar {
-    width: 12px;
-}   
-body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+::-webkit-scrollbar {
+    -webkit-appearance: none;
 }
-   
-body::-webkit-scrollbar-thumb {
-    background-color: #fff;
-    outline: 1px solid #fff;
+
+::-webkit-scrollbar:vertical {
+    width: 12px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ffffff;
 }
 
 #game_conversation_input {
